java/java-tests/testData/codeInsight/daemonCodeAnalyzer/advHighlighting/packageClassClash1/pkg/sub/Test.java
package <error descr="Package 'pkg.sub' clashes with class of same name">pkg.sub</error>;

public class Test { }